WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136309
Occasional crashes in commitTransientZoom's transaction completion block
https://bugs.webkit.org/show_bug.cgi?id=136309
Summary
Occasional crashes in commitTransientZoom's transaction completion block
Tim Horton
Reported
2014-08-27 14:14:44 PDT
<
rdar://problem/17215064
>
Attachments
patch
(2.26 KB, patch)
2014-08-27 14:16 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(2.90 KB, patch)
2014-08-27 15:29 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
fix changelog
(2.22 KB, patch)
2014-08-27 15:30 PDT
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-08-27 14:16:58 PDT
Created
attachment 237251
[details]
patch
WebKit Commit Bot
Comment 2
2014-08-27 14:18:07 PDT
Attachment 237251
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:653: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2014-08-27 14:28:23 PDT
Comment on
attachment 237251
[details]
patch Clearing r? because Dan pointed out some horrors.
Tim Horton
Comment 4
2014-08-27 15:29:50 PDT
Created
attachment 237263
[details]
patch
Tim Horton
Comment 5
2014-08-27 15:30:36 PDT
Created
attachment 237264
[details]
fix changelog
WebKit Commit Bot
Comment 6
2014-08-27 15:31:54 PDT
Attachment 237264
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:644: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 7
2014-08-27 16:01:44 PDT
http://trac.webkit.org/changeset/173029
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug