Occasional crashes in commitTransientZoom's transaction completion block https://bugs.webkit.org/show_bug.cgi?id=136309 <rdar://problem/17215064>

Reviewed by Dan Bernstein.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::commitTransientZoom):
Hold a reference to zoomLayer and the WebPage. It's possible that either
of these things could have gone away by the time the transaction is committed.


Canonical link: https://commits.webkit.org/154135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173029 268f45cc-cd09-0410-ab3c-d52691b4dbfc